<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.safetravel.com.safetravel.Fragment.PerjalananPendaftaran">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingLeft="@dimen/padding_default"
            android:paddingRight="@dimen/padding_default"
            android:paddingTop="@dimen/margin_big"
            android:paddingBottom="@dimen/margin_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/StandardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perjalanan_pendaftaran_tips"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/layout_perjalanan_sementara"
                style="@style/LayoutItem"
                android:layout_height="@dimen/item_height"
                android:layout_width="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content">
                    <ImageView
                        style="@style/IconItemVector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_flight_takeoff_black_24dp"
                        />
                    <LinearLayout
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:paddingLeft="@dimen/margin_standard"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/TextInTitle"
                            android:text="@string/perjalanan_sementara"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            style="@style/TextInSubtitle"
                            android:text="@string/perjalanan_sementara_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    style="@style/IconItemVector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_add_black_24dp" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_gravity="bottom"
                android:background="@color/icon"
                android:orientation="vertical">
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layout_perjalanan_menetap"
                style="@style/LayoutItem"
                android:layout_height="@dimen/item_height"
                android:layout_width="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content">
                    <ImageView
                        style="@style/IconItemVector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_flight_takeoff_black_24dp"
                        />
                    <LinearLayout
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:paddingLeft="@dimen/margin_standard"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/TextInTitle"
                            android:text="@string/perjalanan_menetap"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            style="@style/TextInSubtitle"
                            android:text="@string/perjalanan_menetap_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    style="@style/IconItemVector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_add_black_24dp" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_gravity="bottom"
                android:background="@color/icon"
                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:paddingLeft="@dimen/margin_standard"
            android:paddingRight="@dimen/margin_standard"
            android:paddingTop="@dimen/margin_big"
            android:paddingBottom="@dimen/margin_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content">
                <ImageView
                    style="@style/IconItemVector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_info_black_24dp"
                    />
                <TextView
                    android:layout_marginLeft="@dimen/margin_standard"
                    style="@style/StandardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perjalanan_pendaftaran_info"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
